# origen-one

./: .dockerignore  .env.example  .env.test.example  .eslintrc.js  .gitignore  .replit  BITTENSOR-MIGRATION.md  BROWSER_TEST_KIT.md  CHANGE-ROUND.md  CLAUDE.md  DOWNSTREAM.md  Dockerfile  ENGINEERING.md  ENHANCE-LESSONS.md  GAMIFY.md  IMPLEMENTATION-COMPLETE.md  LESSON_VALIDATION_AUTO_TUNER.md  LICENSE  PHASE-3-TEST-PLAN.md  PLAN.md  README.md  SAST-REPORT.md  SNAG_HUNTING.md  SUNSCHOOL-API.md  SUNSCHOOL_SPECS.md  WELCOME.md  admin-credentials.txt  admin.sh  bandit_results.json  check-types.sh  claude-container.sh  deploy-types.d.ts  drizzle.config.ts  ecosystem-dashboard.html  eslint.config.js  export.py  exported_code.md  fix-storage.js  index.html  jest.config.js  (+23 more)
.claude/: host-bridge.sh  host-request.sh
.dev/: neon-local-patch.js  ws-proxy.js
.devcontainer/: Dockerfile  init-firewall.sh
.stoneforge/: .gitignore
app/: config.py  db.py  main.py
attached_assets/: OPENROUTER-INSTRUCITONS.MD  OPENROUTER-INSTRUCTIONS.MD  Pasted--2025-05-17-19-03-52-59-bd34d799-User-email-sm-allonething-xyz-2025-05-17-19-03-52-59-bd34d799--1747678383918.txt  Pasted--REQ-maprx6dr7jtmq-Starting-POST-request-to-api-lessons-create-queryClient-ts-137--1747338007735.txt  Pasted--SUNSCHOOL-Privacy-Policy-Effective-Date-August-31-2025-What-We-Do-SUNSCHOOL-is-an-AI-pow-1756697138854_1756697138854.txt  Pasted--SUNSCHOOL-Privacy-Policy-Effective-Date-August-31-2025-What-We-Do-SUNSCHOOL-is-an-AI-pow-1756697760048_1756697760048.txt  Pasted--SUNSCHOOL-Privacy-Policy-Effective-Date-August-31-2025-What-We-Do-SUNSCHOOL-is-an-AI-pow-1756697810700_1756697810701.txt  Pasted--Symbol-shapeMode-false-Symbol-kCapture-false-Symbol-kBytesWritten-0-1746142002868.txt  Pasted--Use-build-rollupOptions-output-manualChunks-to-improve-chunking-https-rollupjs-org-configuratio-1747334414419.txt  Pasted--Welcome-to-Origen-Your-Child-s-AI-Learning-Partner-Origen-AI-Tutor-generated-icon-png-De-1747516445158.txt  Pasted--dataSize-253-select-learner-page-tsx-24-Selecting-learner-learner-2-ModeContext-tsx-137-Saved--1758138296301_1758138296302.txt  Pasted--queryClient-ts-116-REQ-mao8e7nbmdzzt-Starting-POST-request-to-api-lessons-001bbc32-e10d-423c-907-1747244779759.txt  Pasted--shadow-style-props-are-deprecated-Use-boxShadow-Auth-query-Received-invalid-user-data-treat-1747677495002.txt  Pasted--to-load-resource-the-server-responded-with-a-status-of-401-Unauthorized-Understand-this-error-use-1747427625893.txt  Pasted--tree-I-node-modules-config-git-upm-attached-assets-OPENROUTER-INSTRUCITONS--1746121866844.txt  Pasted--vite-build-vite-v6-3-4-building-for-production-761-modules-transformed-dist-index-html--1747353966743.txt  (+47 more)
client/: index.html  index.tsx  package-lock.json  package.json  (+1 more)
(+320 files in other folders)
